WIP: add readme file, jenkinsfile updates

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -186,7 +186,9 @@ pipeline {
 
                         def imageTag = "${IMAGE_NAME}:${env.BUILD_NUMBER}"
                         def newTag = "${env.BUILD_NUMBER}"
+                        def earlyTag = "${env.BUILD_NUMBER.toInteger() - 1}"
                         def tagEnvVar = (deployService == "nextjs-green") ? "TAG_GREEN" : "TAG_BLUE"
+                        def tagOppositeEnvVar = (deployService == "nestjs-green") ? "TAG_BLUE" : "TAG_GREEN"
                         withCredentials([usernamePassword(credentialsId: GHCR_CREDS_ID, usernameVariable: 'GHCR_USER', passwordVariable: 'GHCR_TOKEN')]) {
                             sshagent(credentials: [TARGET_SSH_CREDS_ID]) {
                                 sh """ 
@@ -208,6 +210,7 @@ pipeline {
 
                                     echo "--- Exporting new tag for compose: ${tagEnvVar}=${newTag} ---"
                                     export ${tagEnvVar}="${newTag}"
+                                    export ${tagOppositeEnvVar}="${earlyTag}"
                                     
                                     docker compose --env-file init.env up -d --no-deps --force-recreate ${deployService}
 
